% Check from R:
%  news(db = tools:::.build_news_db_from_package_NEWS_Rd("~/R/Pkgs/DPQ/inst/NEWS.Rd"))
\name{NEWS}
\title{DPQ News}
\encoding{UTF-8}

\section{Version 0.5-9 (2024-01-09, svn r290)}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{dbinom_raw()} gets a new more accurate
      \code{version = "R4.4"}, using the new \code{pow1p()} function, from
      R-devel, i.e., \R 4.4.0 and newer.

      \item \code{stirlerr()} gets argument \code{lgamma1p}, the function
      to compute \code{lgamma(n+1)} which was suboptimal for the very
      rarely used \eqn{n < 1/2} case.

      More documentation and tests; experiments added in \file{../Misc/stirlerr-trms.R}.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item \emph{fix} format fixes for when 'long != long long'.
    }
  }
}

\section{Version 0.5-8 (2023-11-30, svn r278)}{
  \subsection{BUG FIXES}{
    \itemize{
      \item \code{ebd0()} and C level \code{ebd0C()} now work with \emph{long} vectors and
      hence return \code{data.frame(yh = *, yl = *)} instead of 2-row matrix.

      \item format fixes: \code{"\%lld"} and \code{(long long)} notably for
      \code{R_xlen_t}.
    }
  }
}

\section{Version 0.5-7 (2023-10-20, svn r275)}{
  \subsection{Misc}{
    \itemize{
      \item fix "lost braces"
      \item replace UTF-8 greek glyps by plotmath
    }
  }
}

\section{Version 0.5-6 (2023-09-06, svn r272)}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{phyperR()} gets \code{lower.tail=TRUE, log.p=FALSE} arguments.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Correctly vectorize \code{phyperR()}.
    }
  }
  \subsection{Misc}{
    \itemize{
      \item Documentation (and internal comment) updates for
      \code{qbinomR()} and \code{qnbinomR()}, notably fixing "empty"
      argument doc.

      \item Deprecated \code{phyperBinMolenaar()}; it has been
      synonym to \code{phyperBinMolenaar.1()}.
